--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.slideImage {
-  @apply object-cover w-full h-96;
+body {
+  @apply bg-black;
+}
+
+/* Nav Bar */
+@media only screen and (min-width: 640px) {
+  nav #menu__btn {
+    display: none;
+  }
 }
