--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,13 +3,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "navbar";
+@import "home";
 body {
   @apply bg-black;
 }
-
-/* Nav Bar */
-@media only screen and (min-width: 640px) {
-  nav #menu__btn {
-    display: none;
-  }
+.App {
+  overflow-x: hidden;
 }
