basic built done

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,8 @@
 @import "home";
 @import "products";
 @import "footer";
-
+@import 'contact';
+@import 'about';
 html {
   font-size: calc(60% + 0.8vmin);
 }
@@ -18,77 +19,3 @@ body {
   overflow-x: hidden;
 }
 
-.product__card {
-  position: relative;
-  cursor: pointer;
-  & #triangle-bottom-right {
-    width: 0;
-    height: 0;
-    border-bottom: 100px solid #ea0000;
-    border-left: 100px solid transparent;
-
-    position: absolute;
-    right: 0rem;
-    bottom: 0rem;
-    transition: transform 0.5s ease-in-out;
-
-    display: none;
-    &:hover {
-      border-bottom: 100px solid #000000;
-    }
-  }
-
-  & .cart__btn {
-    position: absolute;
-    right: 0.5rem;
-    bottom: 0.5rem;
-    transition: all 0.5s ease-in-out;
-    display: none;
-
-    &:hover {
-      #triangle-bottom-right {
-        border-bottom: 100px solid #000000;
-      }
-    }
-  }
-  &:hover {
-    box-shadow: 3px 6px 2px 0px rgb(212, 99, 7);
-    .cart__btn {
-      display: block;
-      animation-name: backInLeft;
-      animation-duration: 0.5s;
-    }
-    #triangle-bottom-right {
-      display: block;
-      animation-name: backInLeft;
-      animation-duration: 0.5s;
-    }
-  }
-}
-
-.about__us {
-  @apply mx-auto text-xl leading-7 text-white md:text-2xl md:w-xxxl lg:w-about my-4;
-
-  & .bdr {
-    animation-name: colorSwitch;
-    animation-duration: 3.5s;
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-    animation-delay: 0.5s;
-    animation-iteration-count: infinite;
-  }
-
-  @keyframes colorSwitch {
-    25% {
-      background-color: black;
-    }
-    50% {
-      background-color: white;
-    }
-    75% {
-      background-color: #ea0000;
-    }
-    100% {
-      background-color: cadetblue;
-    }
-  }
-}
