--- a/src/styles/_products.scss
+++ b/src/styles/_products.scss
@@ -3,5 +3,38 @@
 
   & .product__card {
     @apply px-2 bg-center bg-cover rounded-md  group w-lg h-lg lg:w-xl;
+
+    position: relative;
+    cursor: pointer;
+    & #triangle-bottom-right {
+      width: 0;
+      height: 0;
+      border-bottom: 100px solid #ea0000;
+      border-left: 100px solid transparent;
+
+      position: absolute;
+      right: 0rem;
+      bottom: 0rem;
+      transition: transform 0.5s ease-in-out;
+
+      display: none;
+      &:hover {
+        border-bottom: 100px solid #000000;
+      }
+    }
+
+    & .cart__btn {
+      position: absolute;
+      right: 0.5rem;
+      bottom: 0.5rem;
+      transition: all 0.5s ease-in-out;
+      display: none;
+
+      &:hover {
+        #triangle-bottom-right {
+          border-bottom: 100px solid #000000;
+        }
+      }
+    }
   }
 }
